overflow solved

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -94,17 +94,18 @@ nav {
 }
 
 
-.banner-2 h3, .banner-2 h4{
-    z-index: -10;
+/**********Banner Overlay**********/
+#progress {
+    background: url('../images/progressbg.png') center/cover no-repeat;
+    overflow: hidden;
 }
 
-/**********Banner Overlay**********/
 .overlay-progress {
     width: 100%;
     height: 100%;
     background: var(--primary-color);
     opacity: 0.95;
-    color: #ffffff;
+    color: var(--white-color);
 }
 
 /**********What We Do**********/
